2003-09-08  Stefan Petersen  <spe@stacken.kth.se>

	* gerber.c: Patch from Simon Munton to fix a problem with polygons
	  sometimes not being filled properly. Closes bug #800928 (which
	  he promptly had submitted).

-- Release 0.14 --

>>>>>>> 1.220
2003-05-31  Stefan Petersen  <spe@stacken.kth.se>

	* configure.in, src/amacro.c: Removed the last remaining malloc.h
	  after tips from Charles Lepple on the geda mailinglist.

2003-04-18  Stefan Petersen  <spe@stacken.kth.se>

	* src/draw_amacro.c: Larry Doolittle had a problem when drawing
	  one of his files, a circle seemed to explode. I couldn't 
	  reproduce it, but after his tests I added this patch. Thanks Larry!

2003-04-07  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerber.c: RS274D caused segfaults again. Reported by Skurk.

-- Release 0.13 --

2003-03-16  Stefan Petersen  <spe@stacken.kth.se>

	* src/draw.c, src/gerb_image.h, src/gerber.c: Angles are now
	  calculated as doubles instead of ints. For instance, the cslk
	  example now draws properly at the same time as Dans ridicously
	  small arcs also works.

	* src/gerber.c: Better sanity checks for angles of arcs, so
	  cw are drawn cw and ccw are drawn ccw. Closes bug #703265
	  which was reported by Mark Whitis. Thanks!

2003-03-10  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerber.c: Doesn't warn anymore if a gerber file requests an
	  image rotate on zero degrees. Reported by Balaji V.

2003-03-02  Stefan Petersen  <spe@stacken.kth.se>

	* src/draw_amacro.c: Aperture macro primitive 1 is a filled circle.
	* Makefile.am, configure.in, src/gerbv.c, src/Makefile.am, 
	  src/gerbv.1.in: Removed all traces of Guile. batch.c is left, but 
	  is not compiled in.

2003-03-01  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerb_image.[hc], gerber.c: Redesigned step-and-repeat
	  parser. And when I was at it I also cleaned up new_gerb_image()
	  a bit.

2003-02-24  Stefan Petersen  <spe@stacken.kth.se>
