@@ -62,3 +62,5 @@ Peter Monta
 
 Simon Munton
  - A patch to fix a problem with polygons not always being filled properly.
+ - Another patch to solve circular polygon outline by approximating them
+   with a number of short segments.
